# LearningPython

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  Pipfile  README.md  back_propagation.py  bp_linear.py  pyproject.toml  pytest.ini  requirements.txt  tox.ini
base/: base_knowledge.py  closure_domain.py  custom_dict.py  decorator.py  doraemon.py  extract_picture.py  graph.py  graph_02.py  graph_03.py  graph_03_tests.py  graph_04.py  graph_demo.py  graph_tests.py  interests.py  learning.py  magic_func.py  multi_proc_apply.py  multi_process.py  optimized_for.py  singleton.py  super_init.py  switch.py  test_multiple.py
fantastic/: heart.py  heart2.py
fastapi/: main.py  models.py  requirements.txt
fastapi_demo/: README.md  main.py  requirements.txt
fastapi_demo/router/: demo.py
flask/: main.py
flask/middleware/: operation_log.py
leetcode/: 00002_add_two_num.py  00015_3sum.py  00026_rm_duplicate.py
ml/: bp_linear.py  bp_non_linear.py  bp_nonlinear.py  gradient.py  linear_optimization.py  nonlinear_optimization.py
ml/jax/: bp.py  loss.py
ml/jax_/: bp.py  loss.py
sanic/: main.py  requirements.txt
structure/: linked_list.py
tests/: arithmetic.py  test_arithmetic.py
torch/: decoder_layer.py  encoder_layer.py  enhanced_transformer_demo.py  layer_norm.py  linear_layer.py  multi_head_attn.py  positional_encoding.py  scaled_dot_product_attn.py  train_utils.py  trans.py  trans1.py  trans2.py  transformer.py
utils/: common.py
